--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Home Page</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style type="text/css">
         html {
             background-color: #666;
