--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
             <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
           </li>
           <li>
-            <a href="http://10.0.0.207:32400/web/index.html" target="_blank">Plex</a>
+            <a href="http://www.veriton.com:32400/web/index.html" target="_blank">Plex</a>
           </li>
           <li>
             <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
@@ -146,7 +146,7 @@
             <a href="https://www.netflix.com/" target="_blank">Netflix</a>
           </li>
           <li>
-            <a href="http://10.0.0.207:9091/transmission/web/#upload">Transmission</a>
+            <a href="http://www.veriton.com:9091/transmission/web/#upload">Transmission</a>
           </li>
           <li>
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
