transmission new tab

--- a/Index.html
+++ b/Index.html
@@ -146,7 +146,7 @@
             <a href="https://www.netflix.com/" target="_blank">Netflix</a>
           </li>
           <li>
-            <a href="http://www.veriton.com:9091/transmission/web/#upload">Transmission</a>
+            <a href="http://www.veriton.com:9091/transmission/web/#upload" target="_blank">Transmission</a>
           </li>
           <li>
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
