--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
             <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
           </li>
           <li>
-            <a href="http://www.veriton.com:32400/web/index.html" target="_blank">Plex</a>
+            <a href="http://10.0.0.207:32400/web/index.html" target="_blank">Plex</a>
           </li>
           <li>
             <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
@@ -146,7 +146,7 @@
             <a href="https://www.netflix.com/" target="_blank">Netflix</a>
           </li>
           <li>
-            <a href="http://www.veriton.com:9091/transmission/web/#upload" target="_blank">Transmission</a>
+            <a href="http://10.0.0.207:9091/transmission/web/#upload" target="_blank">Transmission</a>
           </li>
           <li>
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
@@ -176,6 +176,9 @@
           </li>
           <li>
             <a href="https://drive.google.com/" target="_blank">Google Drive</a>
+          </li>
+          <li>
+            <a href="https://servicemonster.atlassian.net/jira/software/projects/SM6/issues/" target="_blank">Jira</a>
           </li>
         </ul>
         <ul>
