--- a/Index.html
+++ b/Index.html
@@ -151,6 +151,9 @@
           <li>
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
           </li>
+          <li>
+            <a href="http://10.0.0.207:8096/" target="_blank">Jellyfin</a>
+          </li>
         </ul>
       </div>
     </div>
