--- a/Index.html
+++ b/Index.html
@@ -183,6 +183,11 @@
           <li>
             <a href="https://servicemonster.atlassian.net/jira/software/projects/SM6/issues/" target="_blank">Jira</a>
           </li>
+          <li>
+            <a href="https://us-west-1.signin.aws.amazon.com/oauth?SignatureVersion=4&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=ASIA2ERYO7XYNCSPSV4Q&X-Amz-Date=2023-05-11T21%3A19%3A10.232Z&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEJX%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLXdlc3QtMSJIMEYCIQCsEiIEPXmQZrddPi51lSWOmOijy3hD4MUZmqjWij7GoQIhAL124%2BC0Qo5cr30gzdWleEijPDAq6iTBOtBrqe%2BPeLSRKuEDCK7%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEQAhoMNjk2OTc2ODY2ODAwIgz49TOrkaJJxN2%2Bu%2BsqtQNJlMO2C%2B5yqo87Mu0k1uqqMRrzLGRhIiWaMvgluT21bp%2BFZHhg6X40cImlubeO4rFSTNcMr5qqpC6ec0FRjO71sptVJ0ngnVMpIqI8tNxmN5Zq6so6nGhrnIZeMQRg0dXDY9m9pY9q98nJ4jszWlFTD9mNewKmSTUYGP0%2BS8rFHaBC%2FCDwKQSH58b7U%2F226VAtur1i9Z%2Ff8nsgkEMWwXauRMTUjCakXBte%2F1cRHi3GAFlBhD2syDGvuQlEVaM%2BHap11OofVU2gKzGtOzcuTTPALlSOWKf1f0V%2FdNV2GPbMuCeRie82CPgY8%2BRjWh7iqz8X1obF5eef36do%2Bp2xYJfwVk2RhNgkX0ccnCkdXE55E2FZzZ0sZ5dv0kEpQGUI1p7m0fEEgwtw%2FlsXD49WF0PE3L7EfuSa%2FUzXiyNOXsS5t7WzEiEaU3s9WcxDwluMlDKYEnNJuwVFH1TdlsMI2Ncup3n7scxvFHD8gYNgV1v%2FSheWW4k7HRDLNbdCxdgQvTYqXUHt5l03y28VaC8Poxiqc%2BlVb6Y6ZX9JaUWX3MbquBtYt5Lt77f1jLGsD%2F01BkUJkq%2FsuDCcrfWiBjqgAVqUCRJ1Qbf6OnuvmJPH1IT7%2FZVYTSwqpg2SaeC3vzmSEU2EeznYKqIVckIBgAXGvIW7m8tlQ6Bg98JS6vykcPokaQoMIPOq6qYgWt9c39o6CI5gYC1d0mJ5SvqTbLmWtlWzTR8dBVT%2BJHu3PsMMyS4AZxTUigtB8NBF%2F%2BCuffeDyHzmGdpbUWz3VaSeqzcFSTqwyANDBGIOwusDaHEqaGU%3D&X-Amz-Signature=60165e06bf107d1389b27d0d754ed402f99a177e63a6f3dea9443ea589ca8cc5&X-Amz-SignedHeaders=host&client_id=arn%3Aaws%3Aiam%3A%3A015428540659%3Auser%2Fec2&code_challenge=vgOXl5RWGxOT9iE7JDm3EDxZZ9RpS5k2NfnVVQMA8TE&code_challenge_method=SHA-256&redirect_uri=https%3A%2F%2Fus-west-1.console.aws.amazon.com%2Fec2%2Fhome%3Fregion%3Dus-west-1%26state%3DhashArgs%2523Instances%253A%26isauthcode%3Dtrue&region=us-west-1&response_type=code&state=hashArgs%23Instances%3A" target="_blank">
+              Amazon Console
+            </a>
+          </li>
         </ul>
         <ul>
           <li>
