fix sm6 local; add messages

--- a/Index.html
+++ b/Index.html
@@ -94,6 +94,9 @@
           <li>
             <a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a>
           </li>
+          <li>
+            <a href="https://messages.google.com/web" target="_blank">Messages</a>
+          </li>
         </ul>
       </div>
       <div class="section">
@@ -191,7 +194,7 @@
         </ul>
         <ul>
           <li>
-            <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
+            <a href="http://localhost:53905/sm6/desktop#home" target="_blank">SM 6 - Local</a>
           </li>
           <li>
             <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
