--- a/Index.html
+++ b/Index.html
@@ -107,7 +107,7 @@
             <a href="https://football.fantasysports.yahoo.com/f1/335840" target="_blank">Yahoo! Fantasy League</a>
           </li>
           <li>
-            <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
+            <a href="https://www.reddit.com/r/Seahawks+fantasyfootball+nfl/" target="_blank">reddit - football multi</a>
           </li>
           <li>
             <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
