--- a/Index.html
+++ b/Index.html
@@ -188,6 +188,12 @@
               Amazon Console
             </a>
           </li>
+          <li>
+            <a href="https://deploy.servicemonster.net/" target="_blank">
+              Octopus Deploy
+            </a>
+          </li>
+          
         </ul>
         <ul>
           <li>
