--- a/Index.html
+++ b/Index.html
@@ -143,6 +143,9 @@
             <a href="https://www.netflix.com/" target="_blank">Netflix</a>
           </li>
           <li>
+            <a href="https://www.hulu.com/" target="_blank">Hulu</a>
+          </li>
+          <li>
             <a href="http://10.0.0.207:9091/transmission/web/#upload" target="_blank">Transmission</a>
           </li>
           <li>
