--- a/Index.html
+++ b/Index.html
@@ -152,7 +152,7 @@
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
           </li>
           <li>
-            <a href="http://10.0.0.207:8096/" target="_blank">Jellyfin</a>
+            <a href="http://10.0.0.150:32400" target="_blank">Plex</a>
           </li>
         </ul>
       </div>
