updated yahoo leagues

--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,10 @@
         <br />
         <ul>
           <li>
-            <a href="https://football.fantasysports.yahoo.com/f1/335840" target="_blank">Yahoo! Fantasy League</a>
+            <a href="https://football.fantasysports.yahoo.com/f1/12329" target="_blank">Yahoo! Fantasy League 1</a>
+          </li>
+          <li>
+            <a href="https://football.fantasysports.yahoo.com/f1/929045" target="_blank">UPTAHOLICS</a>
           </li>
           <li>
             <a href="https://www.reddit.com/r/Seahawks+fantasyfootball+nfl/" target="_blank">reddit - football multi</a>
