remove twitter. add bluesky, nfl bite

--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,7 @@
             <a href="https://www.reddit.com" target="_blank">reddit</a>
           </li>
           <li>
-            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            <a href="https://bsky.app/" target="_blank">BlueSky</a>
           </li>
           <li>
             <a href="https://mail.google.com" target="_blank">Gmail</a>
@@ -116,7 +116,10 @@
             <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
           </li>
           <li>
-            <a href="http://www.borischen.co/">Boris Chen Tier Charts</a>
+            <a href="http://www.borischen.co/" target="_blank">Boris Chen Tier Charts</a>
+          </li>
+          <li>
+            <a href="https://reddit1.nflbite.com/" target="_blank">NFL Bite</a>
           </li>
         </ul>
       </div>
