--- a/Index.html
+++ b/Index.html
@@ -231,6 +231,12 @@
           <li>
             <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
           </li>
+          <li>
+            <a href="https://servicemonster.chemdry.co.nz/cc/" target="_blank">CC - CD NZ</a>
+          </li>
+
+          
+
         </ul>
         <ul>
           <li>
