--- a/Index.html
+++ b/Index.html
@@ -139,6 +139,9 @@
           <li>
             <a href="https://anderserv" target="_blank">Cabbage</a>
           </li>
+          <li>
+            <a href="http://localhost:5173/" target="_blank">Cabbage (localhost)</a>
+          </li>
         </ul>
       </div>
       <div class="section">
