--- a/Index.html
+++ b/Index.html
@@ -197,6 +197,11 @@
             <a href="https://deploy.servicemonster.net/" target="_blank">
               Octopus Deploy
             </a>
+          </li>  
+          <li>
+            <a href="https://identity.trinet.com/" target="_blank">
+              Trinet
+            </a>
           </li>          
         </ul>
         <ul>
