--- a/Index.html
+++ b/Index.html
@@ -167,7 +167,7 @@
             <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
           </li>
           <li>
-            <a href="http://anderserv:32400" target="_blank">Plex</a>
+            <a href="http://anderserv:8096/web/" target="_blank">Jellyfin</a>
           </li>
           <li>
             <a href="http://anderserv" target="_blank">OpenMediaVault</a>
