--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
         <br />
         <ul>
           <li>
-            <a href="https://football.fantasysports.yahoo.com/f1/12329" target="_blank">Yahoo! Fantasy League 1</a>
+            <a href="https://football.fantasysports.yahoo.com/" target="_blank">Yahoo! Fantasy League 1</a>
           </li>
           <li>
             <a href="https://football.fantasysports.yahoo.com/f1/929045" target="_blank">UPTAHOLICS</a>
