--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,7 @@
             <a href="http://www.borischen.co/" target="_blank">Boris Chen Tier Charts</a>
           </li>
           <li>
-            <a href="https://reddit1.nflbite.is/" target="_blank">NFL Bite</a>
+            <a href="https://www.nflbite.is/" target="_blank">NFL Bite</a>
           </li>
         </ul>
       </div>
