--- a/Index.html
+++ b/Index.html
@@ -183,6 +183,9 @@
         <br />
         <ul>
           <li>
+            <a href="https://copilot.cloud.microsoft/" target="_blank">Copilot</a>
+          </li>
+          <li>
             <a href="https://outlook.office.com/mail/inbox" target="_blank">Outlook</a>
           </li>
           <li>
