--- a/Index.html
+++ b/Index.html
@@ -182,6 +182,7 @@
             <a href="https://red-glacier-0809d021e.2.azurestaticapps.net/" target="_blank">Cabbage (azure)</a>
           </li>
         </ul>
+      </div>
       <div class="section">
         <span>Anderserv</span>
         <br />
