--- a/Index.html
+++ b/Index.html
@@ -195,7 +195,7 @@
             <a href="http://anderserv:9000" target="_blank">Portainer (admin)</a>
           </li>
           <li>
-            <a href="http://anderserv:8096/web/" target="_blank">Jellyfin</a>
+            <a href="http://anderserv:32400" target="_blank">Plex</a>
           </li>
           <li>
             <a href="http://anderserv:9091/transmission/web/#upload" target="_blank">Transmission</a>
