--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
             <a href="https://www.amazon.com/" target="_blank">Amazon</a>
           </li>
           <li>
-            <a href="https://home.personalcapital.com/page/login/app#/dashboard" target="_blank">Empower</a>
+            <a href="https://ira.empower-retirement.com/participant/#/sfd-login?accu=MYERIRA" target="_blank">Empower</a>
           </li>
         </ul>
       </div>
