udpate lan links

--- a/Index.html
+++ b/Index.html
@@ -52,28 +52,7 @@
 
   <script type="text/javascript">
     function init() {
-      let userAgent = navigator.userAgent;
-
-      if (userAgent.match(/edg/i)) {
-        document.getElementById("edge").style.display = "block"
-      }
-      else {
-        document.getElementById("ffchrome").style.display = "block"
-      }
-      // if (userAgent.match(/edg/i)) {
-      //   alert("edge");
-      // } else if (userAgent.match(/firefox|fxios/i)) {
-      //   alert("firefox");
-      // } else if (userAgent.match(/safari/i)) {
-      //   alert("safari");
-      // } else if (userAgent.match(/opr\//i)) {
-      //   alert("opera");
-      // } else if (userAgent.match(/chrome|chromium|crios/i)) {
-      //   alert("chrome");
-      // }
-      // else {
-      //   alert("No browser detection");
-      // }
+      //let userAgent = navigator.userAgent;
     }
 
   </script>
@@ -189,10 +168,7 @@
         <br />
         <ul>
           <li>
-            <a href="http://anderserv" target="_blank">OpenMediaVault</a>
-          </li>
-          <li>
-            <a href="http://anderserv:9000" target="_blank">Portainer (admin)</a>
+            <a href="http://anderserv:9443" target="_blank">Portainer (admin)</a>
           </li>
           <li>
             <a href="http://anderserv:32400" target="_blank">Plex</a>
