--- a/Index.html
+++ b/Index.html
@@ -163,7 +163,7 @@
             <a href="http://anderserv:9443" target="_blank">Portainer (admin)</a>
           </li>
           <li>
-            <a href="http://anderserv:32400" target="_blank">Plex</a>
+            <a href="http://anderserv:8096" target="_blank">Jellyfin</a>
           </li>
           <li>
             <a href="http://anderserv:9091/transmission/web/#upload" target="_blank">Transmission</a>
