--- a/Index.html
+++ b/Index.html
@@ -160,7 +160,10 @@
         <br />
         <ul>
           <li>
-            <a href="http://anderserv:9443" target="_blank">Portainer (admin)</a>
+            <a href="https://anderserv:9443" target="_blank">Portainer (admin)</a>
+          </li>
+          <li>
+            <a href="http://anderserv:8989" target="_blank">Sonarr</a>
           </li>
           <li>
             <a href="http://anderserv:8096" target="_blank">Jellyfin</a>
