--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,8 @@
       border: 1px solid #1c3d53;
       margin: 10px;
       padding: 10px;
-      height: 300px;;
+      height: 300px;
+      ;
     }
 
     .section ul {
@@ -109,7 +110,8 @@
             <a href="https://www.amazon.com/" target="_blank">Amazon</a>
           </li>
           <li>
-            <a href="https://ira.empower-retirement.com/participant/#/sfd-login?accu=MYERIRA" target="_blank">Empower</a>
+            <a href="https://ira.empower-retirement.com/participant/#/sfd-login?accu=MYERIRA"
+              target="_blank">Empower</a>
           </li>
         </ul>
       </div>
@@ -155,25 +157,16 @@
           </li>
         </ul>
       </div>
-      <div class="section">
-        <span>Anderserv</span>
-        <br />
+      <div class="section"> <span>Anderserv</span> <br />
         <ul>
-          <li>
-            <a href="https://anderserv:9443" target="_blank">Portainer (admin)</a>
-          </li>
-          <li>
-            <a href="http://anderserv:8989" target="_blank">Sonarr</a>
-          </li>
-          <li>
-            <a href="http://anderserv:8096" target="_blank">Jellyfin</a>
-          </li>
-          <li>
-            <a href="http://anderserv:9091/transmission/web/#upload" target="_blank">Transmission</a>
-          </li>
+          <li> <a href="https://anderserv:9443" target="_blank">Portainer</a> </li>
+          <li> <a href="http://anderserv:8989" target="_blank">Sonarr</a> </li>
+          <li> <a href="http://anderserv:9696" target="_blank">Prowlarr</a> </li>
+          <li> <a href="http://anderserv:8096" target="_blank">Jellyfin</a> </li>
+          <li> <a href="http://anderserv:9091/transmission/web/" target="_blank">Transmission</a> </li>
+          <li> <a href="http://anderserv:19999" target="_blank">Netdata</a> </li>
         </ul>
       </div>
-    </div>
 </body>
 
 </html>
